tests/NormalTests/paczka2/big_fuzzy/45684871.err
Error in line 2: ABJHHRuX8 A415 27,5
Error in line 4: JL8xE A415 13,2
Error in line 5: JL8xE S634 41,5
Error in line 24: 0Lzbx2m8 A415 88,54
Error in line 15: 0Lzbx2m8 A415 18,0
Error in line 29: rm2Q49 S634 85,6
Error in line 55: 0Lzbx2m8 A598 53,7
Error in line 67: 0Lzbx2m8 S634 4,7
Error in line 82: rm2Q49 S198 79,51
Error in line 79: rm2Q49 A415 39,7
Error in line 90: Nx9hKrkSA A415 26,2
Error in line 96: rm2Q49 S198 82,3
Error in line 110: rm2Q49 A598 78,7
Error in line 111: rm2Q49 S634 17,9
Error in line 93: ABJHHRuX8 A415 130,6
Error in line 122: JL8xE S634 76,44
Error in line 121: ABJHHRuX8 S634 4,9
Error in line 117: i68 A415 75,2
Error in line 129: 0Lzbx2m8 S634 23,9
Error in line 132: 0Lzbx2m8 S198 11,4
Error in line 131: Nx9hKrkSA S634 90,0
Error in line 137: Nx9hKrkSA A598 26,6
Error in line 130: JL8xE S634 48,1
Error in line 126: ABJHHRuX8 S198 66,5
Error in line 148: NxfhKrkSA A5f8 f,6
Error in line 139: Nx9hKrkSA S198 35,9
Error in line 153: rm2Q49 S198 45,0
Error in line 159: JL8xE A415 2,6
Error in line 161: rm2Q49 A415 15,9
Error in line 166: JL8xE A415 32,5
Error in line 170: ABJHHRuX8 A415 63,4
Error in line 174: ABJHHRuX8 S634 31,4
Error in line 176: JL8xE A415 85,3
Error in line 167: S634 S198 57,9
Error in line 189: S634 A415 73,2
Error in line 190: Nx9hKrkSA A598 199,1
Error in line 185: JL8xE S634 64,4
Error in line 197: JL8xE A415 3,0
Error in line 196: Nx9hKrkSA S198 10,1
Error in line 209: Nx9hKrkSA A415 93,2
Error in line 217: i68 S198 98,4
Error in line 224: Nx9hKrkSA S198 24,5
Error in line 227: rm2Q49 S634 14,1
Error in line 240: 0Lzbx2m8 S1g8 76,8
Error in line 239: 0Lzbx2m8 A415 2,4
Error in line 244: 0L;bx2m8 A415 80,5
Error in line 237: Nx9hKrkSA A598 125,9
